fix: mobile: non-markdown file header spacing #546

--- a/src/Styles/body.css
+++ b/src/Styles/body.css
@@ -125,7 +125,7 @@ body {
                  --ntb-tbar-top-spacing-md: calc(var(--view-header-height) + var(--ntb-tbar-top-spacing-pad));
              }
          }
-         &.ntb-top-spacing {
+         &.ntb-is-not-markdown {
              --ntb-tbar-top-spacing-md: 0px;
              &.is-floating-nav {
                  --ntb-tbar-top-spacing: calc(var(--view-header-height) + var(--ntb-tbar-top-spacing-pad));
